[gd_scene load_steps=10 format=3 uid="uid://d37tqb8c3giqp"]

[ext_resource type="Texture2D" uid="uid://cr36h6ggl25x3" path="res://InventorySprites/moon.png" id="1_fmjek"]
[ext_resource type="Script" path="res://start_menu.gd" id="1_hldj2"]
[ext_resource type="FontFile" uid="uid://dv1qw0u3oy8uq" path="res://Fonts/ThaleahFat.ttf" id="2_bpn33"]

[sub_resource type="LabelSettings" id="LabelSettings_xuo7b"]
font = ExtResource("2_bpn33")
font_size = 150
font_color = Color(1, 0.862745, 0.45098, 1)
outline_size = 30
outline_color = Color(1, 0.647059, 0, 1)

[sub_resource type="Theme" id="Theme_1yeqg"]
default_font = ExtResource("2_bpn33")
default_font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdjx5"]
bg_color = Color(0.352941, 0.47451, 0.784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_by8r6"]
bg_color = Color(0.372549, 0.717647, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4x07d"]
bg_color = Color(0.682353, 0.894118, 0.929412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_s6jfw"]
font = ExtResource("2_bpn33")
font_size = 50
font_color = Color(0.898039, 0.898039, 0.898039, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_hldj2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -33.0
offset_top = -21.0
offset_right = -9.0
offset_bottom = 6.0
scale = Vector2(200, 150)
color = Color(0.227451, 0.298039, 0.478431, 1)
metadata/_edit_use_anchors_ = true

[node name="StartMenuContainer" type="MarginContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 2.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
metadata/_edit_use_anchors_ = true

[node name="LogoVBox" type="VBoxContainer" parent="CanvasLayer/StartMenuContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/separation = 100

[node name="LogoContainer" type="CenterContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/StartMenuContainer/LogoVBox/LogoContainer"]
layout_mode = 2
texture = ExtResource("1_fmjek")
stretch_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/StartMenuContainer/LogoVBox/LogoContainer"]
layout_mode = 2
text = "LunarLand"
label_settings = SubResource("LabelSettings_xuo7b")

[node name="ButtonVBox" type="VBoxContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SBContainer" type="CenterContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/SBContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme = SubResource("Theme_1yeqg")
theme_override_styles/normal = SubResource("StyleBoxFlat_cdjx5")
theme_override_styles/hover = SubResource("StyleBoxFlat_by8r6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4x07d")
text = "Play"

[node name="HTPContainer" type="CenterContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="HTPButton" type="Button" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/HTPContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme = SubResource("Theme_1yeqg")
theme_override_styles/normal = SubResource("StyleBoxFlat_cdjx5")
theme_override_styles/hover = SubResource("StyleBoxFlat_by8r6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4x07d")
text = "How To Play"

[node name="CContainer" type="CenterContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/CContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme = SubResource("Theme_1yeqg")
theme_override_styles/normal = SubResource("StyleBoxFlat_cdjx5")
theme_override_styles/hover = SubResource("StyleBoxFlat_by8r6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4x07d")
text = "Credits"

[node name="TextContainer" type="CenterContainer" parent="CanvasLayer/StartMenuContainer/LogoVBox"]
layout_mode = 2

[node name="Quote" type="Label" parent="CanvasLayer/StartMenuContainer/LogoVBox/TextContainer"]
layout_mode = 2
text = "\"An out of this world experience!\"
- Someone, probably"
label_settings = SubResource("LabelSettings_s6jfw")
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/SBContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/HTPContainer/HTPButton" to="." method="_on_htp_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenuContainer/LogoVBox/ButtonVBox/CContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
